# calendar

./: .gitignore  .pylintrc  PR_DESCRIPTION.md  README.md  REFACTORING_PLAN.md  cache_artwork_images.py  create_liturgical_image.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
anglican_liturgical_colour/: funcs.py  liturgical.py
liturgical_calendar/: artwork.py  feasts.py  funcs.py  liturgical.py  readings.py  readings_data.py  test_feasts.py
liturgical_calendar/core/: season_calculator.py
liturgical_colour/: feasts.py  funcs.py  liturgical.py
tests/: test_feasts.py  test_generate_liturgical_images.py
tests/unit/: test_season_calculator.py
